<?xml version="1.0"?>
<package>
  <name>rf2o_laser_odometry</name>
  <version>0.1.0</version>
  <description>
    Estimation of 2D odometry based on planar laser scans. Useful for mobile robots with innacurate base odometry.
    For full description of the algorithm, please refer to:
    Planar Odometry from a Radial Laser Scanner. A Range Flow-based Approach. ICRA 2016
    Available at: http://mapir.isa.uma.es/mapirwebsite/index.php/mapir-downloads/papers/217
  </description>

  <maintainer email="jgmonroy@uma.es">Javier G. Monroy</maintainer>
  <author email="marianojt@uma.es"> Mariano Jaimez</author>
  <author email="jgmonroy@uma.es"> Javier G. Monroy</author>
  <license>GPL v3</license> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>  
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>  
  <run_depend>eigen</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
